# rfc-cli

./: Cargo.toml  Makefile  README.md  README_ru.md
.github/workflows/: ci.yml  release.yml
docs/rfcs/: .index.json  0001.md  0002.md  0003.md  0004.md  0005.md  0006.md  0007.md  0008.md
src/: cli.rs  main.rs
src/commands/: check.rs  deps.rs  doctor.rs  edit.rs  init.rs  link.rs  list.rs  mod.rs  new.rs  reindex.rs  set.rs  status.rs  unlink.rs  view.rs
src/rfclib/: index.rs  mod.rs  project.rs  rfc.rs
tests/: integration_test.rs
