[package]
name = "rfc-cli"
version = "0.1.3"
edition = "2021"

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
clap_builder = "=4.4.18"
clap_derive = "=4.4.7"
clap_lex = "=0.6.0"
clap_complete = "=4.4.8"
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.128"
serde_yaml = "=0.9.34"
indexmap = "=2.2.6"
sha2 = "=0.10.8"
